--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let’s Message me</h3>
-            <form action="">
+            <form class="contrat" action="">
                 <label for="name"></label>
                 <input type="text" class="name" id="name" placeholder="Your name">
 
@@ -170,6 +170,7 @@
                 <input type="email" name="email" id="email" placeholder="Your email">
 
                 <textarea name="message" id="message" cols="30" rows="7" placeholder="Message"></textarea>
+                <button class="btn-primary" type="submit">Submit</button>
             </form>
         </div>
     
